Add patch for boost-1.54

--- a/debian/control
+++ b/debian/control
@@ -15,6 +15,7 @@ Build-Depends: autoconf,
                libboost-program-options-dev,
                libboost-system-dev,
                libboost-thread-dev,
+               libboost-atomic-dev,
                libconfig++-dev,
                liblog4cxx10-dev,
                libtool,
