[example confs] Left-over in example danfoss configuration corrected

--- a/example_confs/solarpowerlog_danfoss.conf
+++ b/example_confs/solarpowerlog_danfoss.conf
@@ -49,7 +49,7 @@ inverter :
             manufactor =  "DANFOSS";
 
             # (REQUIRED) Which model we about to talk too
-            # Your choice is at the moment "S-Series" or "Simulator".
+            # Your choice is at the moment "UniLynx" or "TripleLynx".
             # (To obtain the list of choice, comment this line and run
             # solarpowerlog -- it will tell you the valid options.)
             model ="UniLynx";
