--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -102,7 +102,7 @@ solarpowerlog_CPPFLAGS = $(CONFIG_CFLAGS) $(LOG4CXX_CFLAGS) $(APR_CFLAGS) \
 solarpowerlog_LDADD = $(CONFIG_LIBS) $(LOG4CXX_LIBS) $(APR_LIBS) \
 	$(APRUTIL_LIBS) $(BOOST_LDFLAGS) $(BOOST_THREAD_LIBS) \
 	$(BOOST_DATE_TIME_LIBS) $(BOOST_SYSTEM_LIBS) $(BOOST_ASIO_LIBS) \
-	$(BOOST_PROGRAM_OPTIONS_LIBS) $(WIN32_LIBS) $(SOCI_LIBS)
+	$(BOOST_PROGRAM_OPTIONS_LIBS) $(WIN32_LIBS) $(CPPDB_LIBS)
 
 LIBS = $(DEPS_LIBS)  
 
