[DBWriter] Update example conf

--- a/example_confs/dbwriter/solarpowerlog.conf
+++ b/example_confs/dbwriter/solarpowerlog.conf
@@ -46,9 +46,9 @@ inverter :
 
         # (REQUIRED BY SPUTNIK, S-Series)
         # mode of comm (planned:
-        #		"TCP/IP",          Ethernet
-        #		"RS485,            RS485
-        #		"RS485overTCPIP"   Daisy-Chained modules with one over ethernet, the others chained to the rs485 output.
+        #                "TCP/IP",          Ethernet
+        #                "RS485,            RS485
+        #                "RS485overTCPIP"   Daisy-Chained modules with one over ethernet, the others chained to the rs485 output.
         comms = "TCP/IP";
 
         # TCP/IP options. Address and Port.
@@ -82,7 +82,7 @@ logger:
 {
     loggers = (
         {
-            # This dumper is known as (required)
+            # This DB Writer is known as (required)
             name = "DBWriter_tst";
             # It is of type
             type = "DBWriter";
@@ -92,95 +92,170 @@ logger:
             # Note: solarpowerlog uses CppDB as its database backend.
             # So to get additional hints about configuration options,
             # see http://cppcms.com/sql/cppdb/backendref.html
-	    # and http://cppcms.com/sql/cppdb/connstr.html.
-	    # By setting the database type to "custom" you can completly
-	    # define a connection string with the option db_cppdb_options.
-            
-	    # database type
- 	    # choices are mysql, sqlite3, postgresql, odbc and custom
-	    # must be specified
-	    db_type = "sqlite3"
+            # and http://cppcms.com/sql/cppdb/connstr.html.
+            # By setting the database type to "custom" you can completly
+            # define a connection string with the option db_cppdb_options.
 
-	    ### sqlite3:
-	    
-	    # which file is the database
-	    #db_type="sqlite3"
-	    #db_database="/tmp/solarpowerlog.sqlite3";
-	 
-	    # which mode the db should be opened. 
-	    # "create" (default) create if db does not exist
-	    # "readwrite" open db readwrite, but fail if it does not exists before
-	    # (the other availbable mode, "readonly" is not useful for solarpowerlog)
-	    #db_mode = "create"
-	    
-	    # Other options permitted by the CppDB library
-	    # Just an example how to use it:
-	    #db_cppdb_options="busy_timeout=100@use_prepared=off"
+            # database type
+            # choices are mysql, sqlite3, postgresql, odbc and custom
+            # must be specified.
 
-	    ### MySQL
-	    #db_type="mysql";
-	    
-	    # hostname of the server (default is localhost)
-	    #db_host="localhost"
-	    
-	    # user to connect
-	    #db_user="dbuser";
-	    
-	    # password to connect to the server 
-	    #db_password="very\'secret";
-	    
-	    # database to be used
-	    #db_database="solarpowerlog";
-	    
-	    # Port to access the server
-	    # db_port="3306";
-	    
-	    # Alternatively, specify the unix socket to be used
-	    # note: specify either port or socket -- not both!
+            db_type = "sqlite3"
+
+            # Let some examples follow.
+
+            ### sqlite3:
+
+            # which file is the database
+            #db_type="sqlite3"
+            #db_database="/tmp/solarpowerlog.sqlite3";
+
+            # which mode the db should be opened.
+            # "create" (default) create if db does not exist
+            # "readwrite" open db readwrite, but fail if it does not exists before
+            # (the other availbable mode, "readonly" is not useful for solarpowerlog)
+            #db_mode = "create"
+
+            # Other options permitted by the CppDB library
+            # Just an example how to use it:
+            #db_cppdb_options="busy_timeout=100@use_prepared=off"
+
+            ### MySQL
+            #db_type="mysql";
+
+            # hostname of the server (default is localhost)
+            #db_host="localhost"
+
+            # user to connect
+            #db_user="dbuser";
+
+            # password to connect to the server
+            #db_password="very\'secret";
+
+            # database to be used
+            #db_database="solarpowerlog";
+
+            # Port to access the server
+            # db_port="3306";
+
+            # Alternatively, specify the unix socket to be used
+            # note: specify either port or socket -- not both!
             #db_unixsocket="tmp/mysql.sock"
-            
+
             # Additional parameters (see CppDB homepage, especially the MySQL backend reference)
             #db_cppdb_options="opt_read_timeout=10;opt_compress=1";
-            
+
             ### PostgreSQL
-	    #db_type="postgresql";
-	    
-	    # hostname of the server (default is localhost)
-	    #db_host="localhost"
-	    
-	    # user to connect
-	    #db_user="dbuser";
-	    
-	    # password to connect to the server 
-	    #db_password="very\'secret";
-	    
-	    # database to be used
-	    #db_database="solarpowerlog";
-	    
-	    # Port to access the server
-	    # db_port="5432";
-	    
+            #db_type="postgresql";
+
+            # hostname of the server (default is localhost)
+            #db_host="localhost"
+
+            # user to connect
+            #db_user="dbuser";
+
+            # password to connect to the server
+            #db_password="very\'secret";
+
+            # database to be used
+            #db_database="solarpowerlog";
+
+            # Port to access the server
+            # db_port="5432";
+
             # Additional parameters (see CppDB homepage, especially the postgresql backend reference)
             #db_cppdb_options="@blob=lo";
-            
-            
+
+
             ### ODBC Bridge
             #db_type="odbc";
             # You need to completly specify the connection string with db_cppdb_options:
             # See CppDB documentation of the ODBC backend.
             #db_cppdb_options="DSN=MySource;UID=myuser;PWD=secret";
-            
+
             ### Custom
             #db_type="custom";
             # You need to completly specify the connection string with db_cppdb_options:
             # solarpowerlog will just pass the string to the library.
             #db_cppdb_options="odbc:DSN=MySource;UID=myuser;PWD=secret";
-            
-            
-            
-            
-            }
 
+            ## this list specifies the jobs to be done...
+            # every entry is one job...
+            tables = (
+		{
+                db_table="mytable";
+
+                logchangedonly=true;
+                logevery=15.0;
+
+                operation_mode="continous";
+                #operation_mode="single";
+                #operation_mode="cumulative";
+
+                # continous log -- like CVS, just loggiong everything to one big table. Needs a %TIMESTAMP column .
+                # single status/single row  -- for tables with just one row showing actual status. determined by existance of a $selector
+                # which specifies an condition to select the right row.
+                # day/month/year/hourly/.. -- for cumulative tables (like how many kwH per day; determined by any %MONTH, %DAY, %HOUR ... time defining
+                # selectors.)
+
+                # Keywords
+                # modifer "%...." special placeholders (Day, month, timestamp, ....)
+                # selector "$" (to select the right row)
+                #
+
+                db_layout = (
+                #     [  "Capability/Keyword" , "column" ],
+                      [ "%TIMESTAMP"       , "created" ],
+                      [ "%MONTH"           , "m" ],
+                      [ "%DAY"             , "d" ],
+                      [ "%HOUR"            , "h" ],
+                      [ "Current Grid Feeding Power", "pac" ]
+                );
+
+                #tablespec =
+                #   [ "$1", "id" ]
+                #   [ "Inverter Overall Status", "status" ]
+                #   [ "Inverter Temperature (C)", "Temperature"];
+
+               },
+               {
+                db_table="mytable2";
+
+                logchangedonly=true;
+                logevery=15.0;
+
+                operation_mode="continous";
+                #operation_mode="single";
+                #operation_mode="cumulative";
+
+                # continous log -- like CVS, just loggiong everything to one big table. Needs a %TIMESTAMP column .
+                # single status/single row  -- for tables with just one row showing actual status. determined by existance of a $selector
+                # which specifies an condition to select the right row.
+                # day/month/year/hourly/.. -- for cumulative tables (like how many kwH per day; determined by any %MONTH, %DAY, %HOUR ... time defining
+                # selectors.)
+
+                # Keywords
+                # modifer "%...." special placeholders (Day, month, timestamp, ....)
+                # selector "$" (to select the right row)
+                #
+
+                db_layout = (
+                #     [  "Capability/Keyword" , "column" ],
+                      [ "%TIMESTAMP"       , "created" ],
+                      [ "%MONTH"           , "m" ],
+                      [ "%DAY"             , "d" ],
+                      [ "%HOUR"            , "h" ],
+                      [ "Current Grid Feeding Power", "pac" ]
+                );
+
+                #tablespec =
+                #   [ "$1", "id" ]
+                #   [ "Inverter Overall Status", "status" ]
+                #   [ "Inverter Temperature (C)", "Temperature"];
+
+               }
+            )
+	}
     );
 };
 
