[DBWriter] Update example configuration

--- a/example_confs/dbwriter/solarpowerlog.conf
+++ b/example_confs/dbwriter/solarpowerlog.conf
@@ -182,13 +182,13 @@ logger:
             ## this list specifies the jobs to be done...
             # every entry is one job...
             tables = (
-		{
+            {
                 db_table="mytable";
 
                 logchangedonly=true;
                 logevery=15.0;
 
-                operation_mode="continous";
+                operation_mode="continuous";
                 #operation_mode="single";
                 #operation_mode="cumulative";
 
@@ -211,12 +211,6 @@ logger:
                       [ "%HOUR"            , "h" ],
                       [ "Current Grid Feeding Power", "pac" ]
                 );
-
-                #tablespec =
-                #   [ "$1", "id" ]
-                #   [ "Inverter Overall Status", "status" ]
-                #   [ "Inverter Temperature (C)", "Temperature"];
-
                },
                {
                 db_table="mytable2";
@@ -224,7 +218,7 @@ logger:
                 logchangedonly=true;
                 logevery=15.0;
 
-                operation_mode="continous";
+                operation_mode="continuous";
                 #operation_mode="single";
                 #operation_mode="cumulative";
 
