[DBWriter] Carve out CDBWriterHelper in own file

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -26,6 +26,7 @@ DataFilters/HTMLWriter/formatter/CFormatterSearchCSVEntry.cpp \
 DataFilters/interfaces/IDataFilter.cpp DataFilters/CDumpOutputFilter.cpp \
 DataFilters/CCSVOutputFilter.cpp DataFilters/HTMLWriter/CHTMLWriter.cpp \
 DataFilters/DBWriter/CDBWriterFilter.cpp \
+DataFilters/DBWriter/CDBWriterHelper.cpp \
 configuration/Registry.cpp configuration/ILogger.cpp \
 Connections/CAsyncCommand.cpp Connections/CConnectDummy.cpp \
 Connections/sharedconnection/CSharedConnection.cpp \
@@ -67,6 +68,7 @@ DataFilters/HTMLWriter/formatter/CFormatterSearchCSVEntry.h \
 DataFilters/interfaces/IDataFilter.h DataFilters/CDumpOutputFilter.h \
 DataFilters/CCSVOutputFilter.h DataFilters/HTMLWriter/CHTMLWriter.h \
 DataFilters/DBWriter/CDBWriterFilter.h \
+DataFilters/DBWriter/CDBWriterHelper.h \
 configuration/Registry.h configuration/ILogger.h \
 Connections/CAsyncCommand.h Connections/CConnectDummy.h \
 Connections/sharedconnection/CSharedConnection.h \
