--- a/example_confs/dbwriter/solarpowerlog.conf
+++ b/example_confs/dbwriter/solarpowerlog.conf
@@ -32,6 +32,8 @@ inverter :
         { # (REQUIRED) Name of the Inverter (Will be used as reference in the program)
         name   = "Netcat";
 
+        dbglevel =  "ERROR";
+
         # (REQUIRED) "Human Readable Description of the fine piece of hardware. Not interpreted by this software"
         description = "A Inverter inverting";
 
@@ -100,21 +102,19 @@ logger:
             # choices are mysql, sqlite3, postgresql, odbc and custom
             # must be specified.
 
-            db_type = "sqlite3"
-
             # Let some examples follow.
 
             ### sqlite3:
 
             # which file is the database
-            #db_type="sqlite3"
-            #db_database="/tmp/solarpowerlog.sqlite3";
+            db_type="sqlite3"
+            db_database="/tmp/solarpowerlog.sqlite3";
 
             # which mode the db should be opened.
             # "create" (default) create if db does not exist
             # "readwrite" open db readwrite, but fail if it does not exists before
             # (the other availbable mode, "readonly" is not useful for solarpowerlog)
-            #db_mode = "create"
+            db_mode = "create"
 
             # Other options permitted by the CppDB library
             # Just an example how to use it:
@@ -166,7 +166,6 @@ logger:
             # Additional parameters (see CppDB homepage, especially the postgresql backend reference)
             #db_cppdb_options="@blob=lo";
 
-
             ### ODBC Bridge
             #db_type="odbc";
             # You need to completly specify the connection string with db_cppdb_options:
@@ -181,22 +180,64 @@ logger:
 
             ## this list specifies the jobs to be done...
             # every entry is one job...
-            tables = (
+            db_jobs = (
             {
+                # The table to be used for this job
                 db_table="mytable";
 
-                logchangedonly=true;
-                logevery=15.0;
+                # Should we only log if actually *something* changed
+                # If set to "true" the logger will only write to the 
+                # database if actual data changed (might reduce db size)
+                # (note: to determine if smth has changed only data from the 
+                # inverter is considered -- not e.g %TIMESTAMP or like.
+                db_logchangedonly=true;
 
-                operation_mode="continuous";
-                #operation_mode="single";
-                #operation_mode="cumulative";
+                # Time between logging to the database.
+                db_logevery=3.0;
 
-                # continous log -- like CVS, just loggiong everything to one big table. Needs a %TIMESTAMP column .
-                # single status/single row  -- for tables with just one row showing actual status. determined by existance of a $selector
-                # which specifies an condition to select the right row.
-                # day/month/year/hourly/.. -- for cumulative tables (like how many kwH per day; determined by any %MONTH, %DAY, %HOUR ... time defining
-                # selectors.)
+                # Should the table create on startup?
+                # POTENTIALLY DANGEROUS -- can cause data loss.
+                # You have two options:
+                # "YES" -- uppercase YES will create the table but will add 
+                #   "IF NOT EXISTS" to the SQL statement. So the table should 
+                #   not be destroyed if it indeeds already exists. 
+                #   (if your SQL supports this)
+                # "YES-WIPE-MY-DATA" -- DANGEROUS OPTION, use uppercase letters
+                #   This will DELETE the table before creating it.
+                # NOTE: The below examples have an extra safety-pin: You need to
+                # convert them to uppercase letters..
+                # NOTE2: The table will not be created directly on startup, 
+                # but with some delay, as solarpowerlog first needs to figure 
+                # out the data-types to be used for each column.
+                # This also means that db_layout must only reference 
+                # Capabilities that are actually existing and provided 
+                # by the Inverter.
+                db_create_table="YES-WIPE-MY-DATA";
+                #db_create_table="YES-WIPE-MY-DATA";
+
+                db_create_table="yes";
+                #db_create_table="yes-wipe-my-data";
+
+                # db_operation_mode specifies some principle operational mode
+                # for the DB-Writer. Options are:
+                # continous 
+                #   like CVS, just logging everything to one big 
+                #   table. You maybe want a %TIMESTAMP, but that depends on you
+                #   backend reading the data from the database.
+                # single 
+                #   for status/single rows -- e.g tables with just one row 
+                #   showing the actual status. This needs a $selector,
+                #   which specifies the condition to select the to be updated
+                #   row.
+                # cumulative 
+                #    log day/month/year/hourly data. This something between 
+                #    continous/sinlge, as this will add data to the table, but
+                #    if %MONTH, %DAY, %HOUR (... time defining selektors) have
+                #    not been changed since, it will update this row instead
+                #    of adding a new table.
+                db_operation_mode="continuous";
+                #db_operation_mode="single";
+                #db_operation_mode="cumulative";
 
                 # Keywords
                 # modifer "%...." special placeholders (Day, month, timestamp, ....)
