--- a/example_confs/dbwriter/solarpowerlog.conf
+++ b/example_confs/dbwriter/solarpowerlog.conf
@@ -215,7 +215,7 @@ logger:
                 db_create_table="YES-WIPE-MY-DATA";
                 #db_create_table="YES-WIPE-MY-DATA";
 
-                db_create_table="yes";
+                #db_create_table="yes";
                 #db_create_table="yes-wipe-my-data";
 
                 # db_operation_mode specifies some principle operational mode
@@ -247,9 +247,9 @@ logger:
                 db_layout = (
                 #     [  "Capability/Keyword" , "column" ],
                       [ "%TIMESTAMP"       , "created" ],
-                      [ "%MONTH"           , "m" ],
-                      [ "%DAY"             , "d" ],
-                      [ "%HOUR"            , "h" ],
+   #                   [ "%MONTH"           , "m" ],
+  #                    [ "%DAY"             , "d" ],
+ #                     [ "%HOUR"            , "h" ],
                       [ "Current Grid Feeding Power", "pac" ]
                 );
                },
