--- a/example_confs/dbwriter/solarpowerlog.conf
+++ b/example_confs/dbwriter/solarpowerlog.conf
@@ -184,6 +184,12 @@ logger:
             {
                 # The table to be used for this job
                 db_table="mytable";
+                
+                # Allow "Sparse Tables", so logging also values if only 
+                # a subset of all data is available.
+                # solarpowerlog will then put "NULL" into the database.
+                # optional, defaults to false
+                db_allowsparse=false;
 
                 # Should we only log if actually *something* changed
                 # If set to "true" the logger will only write to the 
@@ -224,6 +230,7 @@ logger:
                 #   like CVS, just logging everything to one big 
                 #   table. You maybe want a %TIMESTAMP, but that depends on you
                 #   backend reading the data from the database.
+                #   $Selektors are not available.
                 # single 
                 #   for status/single rows -- e.g tables with just one row 
                 #   showing the actual status. This needs a $selector,
@@ -231,10 +238,11 @@ logger:
                 #   row.
                 # cumulative 
                 #    log day/month/year/hourly data. This something between 
-                #    continous/sinlge, as this will add data to the table, but
-                #    if %MONTH, %DAY, %HOUR (... time defining selektors) have
-                #    not been changed since, it will update this row instead
-                #    of adding a new table.
+                #    continous/sinlge, as this will add data to the table,
+                #    It will update a row instead of adding a new row.
+                #    To select the right row all %modiefiers are used as 
+                #    Selektors.
+              
                 db_operation_mode="continuous";
                 #db_operation_mode="single";
                 #db_operation_mode="cumulative";
