[DBWriter] Also allow to just print the CREATE statement -- via option db_create_table="print-sql-statement"

--- a/example_confs/dbwriter/solarpowerlog.conf
+++ b/example_confs/dbwriter/solarpowerlog.conf
@@ -210,6 +210,9 @@ logger:
                 #   (if your SQL supports this)
                 # "YES-WIPE-MY-DATA" -- DANGEROUS OPTION, use uppercase letters
                 #   This will DELETE the table before creating it.
+                # "print-sql-statement" (lower case string): Just log the
+                #   statement required to create the table as INFO-Level message.
+                #   (This is good to give you an hint to create the table yourself)
                 # NOTE: The below examples have an extra safety-pin: You need to
                 # convert them to uppercase letters..
                 # NOTE2: The table will not be created directly on startup, 
@@ -223,6 +226,7 @@ logger:
 
                 #db_create_table="yes";
                 #db_create_table="yes-wipe-my-data";
+                #db_create_table="print-sql-statement"
 
                 # db_operation_mode specifies some principle operational mode
                 # for the DB-Writer. Options are:
