[DBWriter] Move class CdbInfo into own file

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -28,6 +28,7 @@ DataFilters/CCSVOutputFilter.cpp DataFilters/HTMLWriter/CHTMLWriter.cpp \
 DataFilters/DBWriter/CDBWriterFilter.cpp \
 DataFilters/DBWriter/CDBWriterHelper.cpp \
 DataFilters/DBWriter/CDBWHSpecialTokens.cpp \
+DataFilters/DBWriter/CdbInfo.cpp \
 configuration/Registry.cpp configuration/ILogger.cpp \
 Connections/CAsyncCommand.cpp Connections/CConnectDummy.cpp \
 Connections/sharedconnection/CSharedConnection.cpp \
@@ -71,6 +72,7 @@ DataFilters/CCSVOutputFilter.h DataFilters/HTMLWriter/CHTMLWriter.h \
 DataFilters/DBWriter/CDBWriterFilter.h \
 DataFilters/DBWriter/CDBWriterHelper.h \
 DataFilters/DBWriter/CDBWHSpecialTokens.h \
+DataFilters/DBWriter/CdbInfo.h \
 configuration/Registry.h configuration/ILogger.h \
 Connections/CAsyncCommand.h Connections/CConnectDummy.h \
 Connections/sharedconnection/CSharedConnection.h \
